tests/common/compile-error/02_python_bool_literal.fpy
@@[target("python_3")]

# NEGATIVE TEST: Frame must NOT rewrite native `true` to Python's `True`.
# Author wrote `return true` (lowercase) in native code. Framec passes it
# through verbatim. Python rejects: NameError: name 'true' is not defined.
#
# This test fails (the negative framework's "fail" = native compile succeeds)
# if framec ever starts silently rewriting bool literals to paper over the
# source author's mistake. That would be a regression against the
# native-passthrough architecture.

@@system NegBoolLiteral {
    interface:
        probe(): bool

    machine:
        $Ready {
            probe(): bool {
                return true
            }
        }
}

if __name__ == '__main__':
    # Actually invoke probe() so the `return true` executes and
    # Python's NameError fires. Without the call the bad syntax
    # sits in the method body but is never evaluated.
    NegBoolLiteral().probe()
